# pendulum_description

./: CMakeLists.txt  package.xml
config/: controllers.yaml
launch/: gazebo.launch  rviz.launch
robot/: inv_pendulum.urdf.xacro  pendulum.urdf.xacro
urdf/pendulum/: pendulum.urdf.xacro
